<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="amount_text">Enter Amount</string>
    <string name="textViewBillAmount">""</string>
    <string name="seekPercent">15 %</string>
    <string name="tipLabel">Tip</string>
    <string name="totalLabel">Total</string>
    <string name="tipTextView">$0.00</string>
    <string name="totalTextView">$0.00</string>
</resources>
